<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SunShine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detailed">DetailedActivity</string>
    <string name="location_key">location</string>
    <string name="location_pref_label" translatable="false">Location</string>
    <string name="location_pref_default" translatable="false">chennai,IN</string>
    <string name="unit_key">unit</string>
    <string name="unit_pref_label">Temperature Unit</string>
    <string name="unit_pref_metric">metric</string>
    <string name="unit_pref_imperial">imperial</string>
    <string name="unit_pref_default">@string/unit_pref_metric</string>
    <string name="unit_pref_metric_label">metric</string>
    <string name="unit_pref_imperial_label">imperial</string>
    <string name="action_map_label">View in Map</string>
    <string name="action_share_label">Share</string>
</resources>
