<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- <CheckBoxPreference
        android:key="example_checkbox"
        android:title="@string/pref_title_social_recommendations"
        android:summary="@string/pref_description_social_recommendations"
        android:defaultValue="true" /> -->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/location_key"
        android:title="@string/location_pref_label"
        android:defaultValue="@string/location_pref_default"
        android:inputType="text"
        android:singleLine="true"
        android:maxLines="1" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="@string/unit_key"
        android:title="@string/unit_pref_label"
        android:defaultValue="@string/unit_pref_default"
        android:entries="@array/unit_pref_array"
        android:entryValues="@array/unit_pref_array_values"
        />

</PreferenceScreen>
